@@ -469,6 +469,13 @@ Release 2.8.0 - UNRELEASED
     HDFS-8215. Refactor NamenodeFsck#check method.  (Takanobu Asanuma
     via szetszwo)
 
+    HDFS-8052. Move WebHdfsFileSystem into hadoop-hdfs-client. (wheat9)
+
+    HDFS-8176. Record from/to snapshots in audit log for snapshot diff report.
+    (J. Andreina via jing9)
+
+    HDFS-8280. Code Cleanup in DFSInputStream. (Jing Zhao via wheat9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
